--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-paper": "^4.12.1",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-select-dropdown": "^2.0.3",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-native-webview": "^11.22.2",
+    "@react-native-community/netinfo": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
