--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@expo-google-fonts/lobster": "^0.2.2",
     "@expo-google-fonts/prata": "^0.2.2",
     "@react-native-async-storage/async-storage": "^1.17.6",
+    "@react-native-community/netinfo": "8.2.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-ads-admob": "^13.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-font": "^10.1.0",
     "expo-splash-screen": "~0.15.1",
@@ -37,7 +39,7 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7",
     "react-native-webview": "^11.22.2",
-    "@react-native-community/netinfo": "8.2.0"
+    "expo-updates": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
